# swc-plugin-import-lcap

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/workflows/: test.yml
__test__/fixture/default/: input.js  output.js
__tests__/: wasm.test.ts
__tests__/fixture/default/: config.json  input.js  output.js
src/: lib.rs  transform.rs
